--- a/src/Home/HomeStyle.css
+++ b/src/Home/HomeStyle.css
@@ -34,14 +34,15 @@
   
   
   .projects-section {
-    background-color: #fff; /* Color de fondo de la sección de proyectos */
+    background-color: #333; /* Color de fondo de la sección de proyectos */
     padding: 50px 0;
+    color: #fff;
   }
   
   .contact-section {
-    background-color: #f5f5f5; /* Color de fondo de la sección de contacto */
+    background-color:#f5f5f5; /* Color de fondo de la sección de contacto */
     padding: 50px 0;
-    color: #333; /* Color del texto en la sección de contacto */
+   
   }
   .iconos{
     padding: 3rem;
