--- a/src/components/StyleProjects.css
+++ b/src/components/StyleProjects.css
@@ -1,10 +1,11 @@
 .projects{
-    padding: 3rem;
+    /* padding: 1rem; */
+    margin-top: 2rem;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: center;
-    justify-content: space-around;
-    align-content: space-around;
+    /* justify-content: space-around; */
+    /* align-content: space-around; */
     align-items: center;
 
     
@@ -18,4 +19,16 @@
   height: 27rem;
   font-size: 0.9rem;
   
+  }
+
+  @media (max-width:600px) {
+   
+    .projects{
+      
+      flex-wrap: wrap;
+      
+  
+      
+  }
+    
   }
