--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,36 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
+*{
+  width: 100%;
+}
+
+:root {
+  --bs-body-font-family: "Source Code Pro", monospace;
+  /* line-height: 1.5; */
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --color: #fd93df;
+  --fondo: #1E1E1E;
+  --violeta: #8d3d8d;
+  max-width: 100vw;
+
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
   margin: 0;
   display: flex;
+  background-color: #1E1E1E;
+  color: rgba(255, 255, 255, 0.87);
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  
 }
 
 h1 {
@@ -36,34 +38,36 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+.button {
+  border-radius: 6rem;
+  border: 1.5px solid var(--color);
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--color);
+  color: var(--fondo);
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 0.25s;
+  width: 12rem;
 }
-button:hover {
-  border-color: #646cff;
+.button:hover {
+  color: var(--fondo);
+  background-color: var(--violeta);
+  outline: 1.5px solid transparent;
 }
-button:focus,
+.button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 4px auto transparent;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+a{
+  color: var(--color);
+}
+
+a:hover {
+  color:var(--violeta)
+}
+
+
+
