--- a/src/components/skills/StyleSkills.css
+++ b/src/components/skills/StyleSkills.css
@@ -77,3 +77,11 @@ font-size: small;
   .star.filled {
     color: gold; /* Color para estrellas llenas */
   }
+
+  @media (max-width:600px) {
+    .icon {
+      width: 8rem;
+      height: 10rem;
+      
+    }
+  }
