--- a/src/Home/HomeStyle.css
+++ b/src/Home/HomeStyle.css
@@ -34,7 +34,7 @@
   .typewriter {
     overflow: hidden;
     border-right: .15em solid var(--color); /* Color del cursor */
-    /* white-space: nowrap; */
+    white-space: nowrap;
     /* margin: 0 auto; */
     letter-spacing: .15em;
     animation: 
@@ -68,19 +68,27 @@
 
 
     .App > section {
-      height: 100%;
+      max-height: 100vh;
       max-width: 100vw;
-      margin-top: 2rem;
+      /* margin-top: 4rem; */
         
     }   
     .welcome-section {
-      flex-direction: column;
+      flex-direction: column-reverse;
       flex-wrap: wrap;
       max-width: 100vw;
+      gap: 4rem;
     }
 
-    .perfil{
-      margin-top: 4rem;
-    }
     
+    
+    .typewriter {
+     font-size: xx-large;
+      white-space: nowrap;
+      /* margin: 0 auto; */
+      letter-spacing: .1em;
+      animation: 
+        typing 3.5s steps(30, end),
+        blink .75s step-end infinite;
+    }
   }
