--- a/src/Home/HomeStyle.css
+++ b/src/Home/HomeStyle.css
@@ -73,11 +73,16 @@
       /* margin-top: 4rem; */
         
     }   
+
     .welcome-section {
       flex-direction: column-reverse;
       flex-wrap: wrap;
       max-width: 100vw;
       gap: 4rem;
+    }
+
+    .skills-section{
+      margin-top: 4rem;
     }
 
     
