--- a/src/Home/HomeStyle.css
+++ b/src/Home/HomeStyle.css
@@ -83,17 +83,14 @@
 
     .skills-section{
       margin-top: 4rem;
+      position: relative;
     }
 
     
     
     .typewriter {
      font-size: xx-large;
-      white-space: nowrap;
       /* margin: 0 auto; */
       letter-spacing: .1em;
-      animation: 
-        typing 3.5s steps(30, end),
-        blink .75s step-end infinite;
     }
   }
