--- a/src/Home/HomeStyle.css
+++ b/src/Home/HomeStyle.css
@@ -11,6 +11,7 @@
 .App {
     text-align: center;
    
+   
   }
 .App > section {
   height: 100vh;
@@ -68,9 +69,9 @@
 
 
     .App > section {
-      /* max-height: 100vh; */
+      height: auto;
       max-width: 100vw;
-      /* margin-top: 4rem; */
+      margin-top: 10rem;
         
     }   
 
@@ -80,11 +81,8 @@
       max-width: 100vw;
       gap: 4rem;
     }
-/* 
-    .skills-section{
-      margin-top: 4rem;
-      
-    } */
+
+   
 
     
     
