--- a/src/components/skills/StyleSkills.css
+++ b/src/components/skills/StyleSkills.css
@@ -6,16 +6,18 @@
     justify-content: space-around;
     align-content: space-around;
     align-items: center;
+    gap: 1rem;
    
 
   }
 .icon {
-    width: 8rem;
+    width: 8.3rem;
     height: 11rem;
-    padding: 0.3rem;
+    
     perspective: 1000px; /* Da profundidad a la escena para el efecto 3D */
   }
   .icon-img{
+    margin-top: 1rem;
     max-width: 70px
   }
   .icon-title{
