--- a/src/Home/HomeStyle.css
+++ b/src/Home/HomeStyle.css
@@ -67,6 +67,11 @@
 
   @media (max-width:600px) {
 
+    .App {
+      
+     padding: 0 2rem;
+     
+    }
 
     .App > section {
       height: auto;
